--- a/package.json
+++ b/package.json
@@ -13,40 +13,41 @@
 		"test": "vitest"
 	},
 	"devDependencies": {
-		"@lucide/svelte": "^0.482.0",
-		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"@tailwindcss/vite": "^4.0.0",
-		"@tanstack/table-core": "^8.20.5",
+		"@lucide/svelte": "^0.513.0",
+		"@sveltejs/adapter-auto": "^6.0.1",
+		"@sveltejs/kit": "^2.21.3",
+		"@sveltejs/vite-plugin-svelte": "^5.1.0",
+		"@tailwindcss/vite": "^4.1.8",
+		"@tanstack/table-core": "^8.21.3",
 		"@testing-library/jest-dom": "^6.6.3",
-		"@testing-library/svelte": "^5.2.4",
-		"@types/node": "^22",
-		"bits-ui": "^1.5.0",
+		"@testing-library/svelte": "^5.2.8",
+		"@types/node": "^22.15.31",
+		"bits-ui": "^2.5.0",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "^8.6.0",
 		"formsnap": "^2.0.1",
-		"jsdom": "^26.0.0",
+		"jsdom": "^26.1.0",
 		"layerchart": "2.0.0-next.6",
 		"paneforge": "^1.0.0-next.5",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"svelte-sonner": "^1.0.1",
-		"sveltekit-superforms": "^2.19.1",
-		"tailwind-merge": "^3.0.2",
-		"tailwind-variants": "^0.2.1",
-		"tailwindcss": "^4.0.0",
-		"tw-animate-css": "^1.3.0",
-		"typescript": "^5.0.0",
+		"svelte": "^5.33.18",
+		"svelte-check": "^4.2.1",
+		"svelte-sonner": "^1.0.5",
+		"sveltekit-superforms": "^2.26.1",
+		"tailwind-merge": "^3.3.0",
+		"tailwind-variants": "^1.0.0",
+		"tailwindcss": "^4.1.8",
+		"tw-animate-css": "^1.3.4",
+		"typescript": "^5.8.3",
 		"vaul-svelte": "^1.0.0-next.7",
-		"vite": "^6.2.6",
-		"vitest": "^3.0.0"
+		"vite": "^6.3.5",
+		"vitest": "^3.2.3"
 	},
 	"dependencies": {
-		"@inlang/paraglide-js": "^2.0.0",
+		"@inlang/paraglide-js": "^2.0.13",
+		"@internationalized/date": "^3.8.1",
 		"@node-rs/argon2": "^2.0.2",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
-		"mode-watcher": "^1.0.7"
+		"mode-watcher": "^1.0.8"
 	}
 }
