--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
 		"typescript": "^5.8.3",
 		"vaul-svelte": "^1.0.0-next.7",
 		"vite": "^6.3.5",
-		"vitest": "^3.2.3"
+		"vitest": "^3.2.3",
+		"zod": "^3.25.63"
 	},
 	"dependencies": {
 		"@inlang/paraglide-js": "^2.0.13",
