--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"vitest": "^3.0.0"
 	},
 	"dependencies": {
+		"@humanspeak/svelte-markdown": "^0.8.7",
 		"@inlang/paraglide-js": "^2.0.0",
 		"@node-rs/argon2": "^2.0.2",
 		"@oslojs/crypto": "^1.0.1",
