--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"zod": "^3.25.76"
 	},
 	"dependencies": {
+		"@humanspeak/svelte-markdown": "^0.8.8",
 		"@inlang/paraglide-js": "^2.2.0",
 		"@internationalized/date": "^3.8.2",
 		"@node-rs/argon2": "^2.0.2",
