--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"test": "vitest"
 	},
 	"devDependencies": {
-		"@lucide/svelte": "^0.482.0",
+		"@lucide/svelte": "^0.525.0",
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
@@ -31,7 +31,7 @@
 		"paneforge": "^1.0.0-next.5",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
-		"svelte-sonner": "^1.0.1",
+		"svelte-sonner": "^1.0.5",
 		"sveltekit-superforms": "^2.19.1",
 		"tailwind-merge": "^3.0.2",
 		"tailwind-variants": "^0.2.1",
@@ -47,6 +47,7 @@
 		"@node-rs/argon2": "^2.0.2",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
+		"lucide-svelte": "^0.525.0",
 		"mode-watcher": "^1.0.7"
 	}
 }
